# python-template

./: .coverage  .gitignore  .pre-commit-config.yaml  Pipfile  README.md  setup.cfg  setup.py  tox.ini
UNKNOWN.egg-info/: SOURCES.txt
src/UNKNOWN.egg-info/: SOURCES.txt
src/hello/: __init__.py
test/: test_sample.py
tests/: test_simple.py
